# MCA

./: .gitignore  .ninja_deps  .ninja_log  12_02_test.csv  CMakeCache.txt  CMakeLists.txt  DATA_EXAMPLE.txt  README.md  TODO  acquisitionmenu.cpp  autopeakdialog.cpp  build.ninja  data.cpp  data.h  defineroidialog.cpp  detectthread.cpp  dialogs.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  menubar.h  qth.h  roitab.cpp  serial.h  serialsettingdialog.cpp  spectochart.cpp  tempdialog.cpp  test.csv  test2.csv  toolbar.h  uart.cpp  utils.cpp  viewmenu.cpp
includes/: dialogs.h  mainwindow.h  threads.h  types.h  utils.h  widgets.h
old_files/: analyzemenu.cpp  data.cpp  data.h  dialogs.h  displaymenu.cpp  filemenu.cpp  helpmenu.cpp  mainwindow.cpp  mainwindow.h  qth.h  spectochart.cpp  spectochart.h  toolbar.cpp  uart.cpp  utils.h  widgets.h
sources/: mainwindow_ui.cpp  utils.cpp
sources/UI/: mainspectrumchart_ui.cpp  mainwindow_ui.cpp  roiregionmanager_ui.cpp  roitabwidget_ui.cpp  serialmanager_ui.cpp  spectrumchart_ui.cpp  spectrumlistmanager_ui.cpp
sources/functions/: mainwindow_function.cpp  roiregionmanager_function.cpp  roitabwidget_function.cpp  serialmanager_function.cpp  spectrumchart_function.cpp  spectrumlistmanager_function.cpp
sources/types/: levelseriesdata.cpp  mcafilestream.cpp  portscanner.cpp  serialstream.cpp  serialworker.cpp  uartstream.cpp  uartworker.cpp
src/: CMakeLists.txt  MCA  iMCA  icons.qrc  main.cpp
src/MCA_autogen/6YEA5652QU/: moc_mainwindow.cpp.d
src/include/: data.h  dialogs.h  mainwindow.h  menubar.h  spectochart.h  toolbar.h  utils.h  widgets.h
src/utils/: data.cpp  utils.cpp
src/widgets/: mainwindow.cpp  mainwindow.h  spectochart.cpp
src/widgets/bar/: analyzemenu.cpp  aquisitionmenu.cpp  dppmenu.cpp  filemenu.cpp  toolbar.cpp
src/widgets/tab/: roitab.cpp
